--- a/.github/workflows/ansible-deploy.yml
+++ b/.github/workflows/ansible-deploy.yml
@@ -1,10 +1,10 @@
-name: Ansible keystore playbook
+name: Ansible playbook
 
 on:
   workflow_dispatch:
     inputs:
       ENVIRONMENT:
-        required: true
+        required: false
         type: choice
         description: environment to run ansible
         options:
@@ -23,8 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Add SSH Key
-        run: |
-          echo "CI running on ${{ github.event.inputs.ENVIRONMENT }} environment"
+        run: |         
           mkdir -p /home/runner/.ssh
           # DOKKU_SSH_KEY is the name of the repository secret
           echo "${{ secrets.SSH_ANSIBLE }}" > /home/runner/.ssh/github_actions
@@ -34,13 +33,11 @@ jobs:
           ssh-add -L
 
       - name: Set ansible_inventory
-        run: |
-          echo "CI running on ${{ github.event.inputs.ENVIRONMENT }} environment"
+        run: |          
           cd infra/ansible
           echo "${{ secrets.HOSTS }}" > hosts.ini
 
       - name: Run Playbook
-        run: |
-          echo "CI running on ${{ github.event.inputs.ENVIRONMENT }} environment"
+        run: |          
           cd infra/ansible
           ansible-playbook playbook-evmos.yml -i hosts.ini -v -b
